--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,12 @@ plugins {
     id 'java-library'
 }
 
+
 group 'com.github'
 version '1.0'
 
 sourceCompatibility = 1.8
+compileJava.options.encoding = 'UTF-8'
 
 repositories {
     mavenCentral()
